* Allow booleans to be given to validate_inclusion_of [#89]

* Allow allow_values_for and allow_mass_assignment_of matchers to be executed in
  the negative form by including Remarkable::Negative module [#85]

* Ensure quick subject bypass protected attributes [#87]

* Added :token and :separator to deal with :tokenizer in validates_length_of [#77]

* Deprecated validate_format_of. It does not have the same API as the respective
  ActiveRecord macro, raising questions frequentely about its usage [#76]

* allow_mass_assignment_of when called without arguments checks if any mass
  assignment is possible [#80]

* Add :table_name option to have_index (thanks to Lawrence Pit) [#79]

* Allow default subject attributes to be given [#74]
  You can even mix with a fixture replacement tool and still use quick subjects:

    describe Post
      # Fixjour example
      subject_attributes { valid_post_attributes }

      describe :published => true do
        should_validate_presence_of :published_at
      end
    end

* Bug fix when a symbol is given has join table to habtm association [#75]

* Association matchers now searches in the right database for tables [#73]

* validate_length_of accepts :with_kind_of to enable it to work with associations [#69]
  In your Post specs now you can write:

    should_validate_length_of :comments, :maximum => 10, :with_kind_of => Comment

# v3.1

* Allow validate_presence_of to work with associations [#63]

* Allow validate_uniqueness_of to work when scopes are not stringfiable values.
  You can now give timestamps, datetime, date and boolean as scopes [#60]

* Allow subjects to be overwriten quickly (quick subjects):

    describe Post
      should_validate_presente_of :title
 
      describe :published => true do
        should_validate_presence_of :published_at
      end
    end
 
  Is the same as:

    describe Post
      should_validate_presente_of :title
 
      describe "when published is true" do